0.9 (unreleased)
================

 

0.8 (2009-04-27)
================

 - Make it possible to set additional options per process in the control script.
   [nkryptic]

0.7 (2009-01-27)
================

 - Added 'plugins' option so we can install extra eggs (supervisor plugins)
   [mustapha]

 - Some fixes for eventlistner part [mustapha]

 - Updated tests

0.6 (2008-11-10)
================

 - One can now specify the user account that will be used as the account 
   which runs the program.
   [amos]

0.5 (2008-08-23)
================

 - Adding eventlistners option for use as event notification framework.  
   Targetting use with supervisor's memmon event listener
   [aburkhalter]
 
0.4 (2008-06-12)
================

 - Use dynamic script names to allow multiple cluster
   [gawel]

 - Ensure that the log dir is created when used without zope's recipes
   [gawel]


0.3 (2008-06-01)
================

 - Updated docs and tests
   [mustapha]
 
 - pep8 cosmetics
   [mustapha]

 - Make it possible to pass in arguments to the control script.
   [hannosch]

 - Put all specified options, like server url and username into the generated
   control script. This allows to run it as is.
   [hannosch]

0.2 (2008-04-23)
================

 - Make possible to pass arguments to the command so one can use ctl scripts
   with supervisor with arguments like 'fg' for zope instances or --no-detach 
   or something similar for other programs
   [mustapha]

 - updated tests
   [mustapha]

0.1 (2008-04-21)
================

 - Created recipe with ZopeSkel [Mustapha Benali].