@@ -1,7 +1,8 @@
 0.9 (unreleased)
 ================
 
- 
+ - Applied Jonathan Ballet's patch: The generated control script doesn't 
+   automatically connect on the created supervisord when running on a custom port. 
 
 0.8 (2009-04-27)
 ================
